# netfs

./: DEMO.md  PLAN.md  README.md  pyproject.toml
agent/: device_agent.py
client/: netfs_cli.py
docs/: DEPLOY.md  PROTOCOL.md
mount/: fuse_main.py
src/netfs/: __init__.py  agent_server.py  cli.py  errors.py  exec.py  fs.py  fusefs.py  protocol.py  rpc_client.py  tunnel.py
tests/: conftest.py  test_fuse_cache.py  test_integration.py  test_mount.py
